# Chieve

./: .gitignore  CLAUDE.md  README.md  docker-compose.deploy.yml  docker-compose.yml  package-lock.json
.github/workflows/: publish.yml
backend/: docker-compose.yml
backend/Achievement_Service/: Dockerfile  main.py  pyproject.toml
backend/Achievement_Service/alembic/: env.py
backend/Achievement_Service/src/: main.py
backend/Recommendation_Service/: Dockerfile  pyproject.toml
backend/Recommendation_Service/alembic/: env.py
backend/Recommendation_Service/alembic/versions/: a1b2c3d4e5f6_initial_schema.py
backend/Recommendation_Service/src/: main.py
backend/Recommendation_Service/src/dependencies/: service_auth.py
backend/Recommendation_Service/src/models/: errors.py  recommendation.py  schemas.py
backend/Recommendation_Service/src/routes/: recommendations.py  wishlist.py
backend/Recommendation_Service/src/services/: ServiceManager.py  achievement_service_client.py  auth_service.py  postgres_service.py  recommendation_service.py  wishlist_service.py
backend/Recommendation_Service/src/worker/: celery_app.py  tasks.py
backend/User_Service/: pyproject.toml
backend/User_Service/alembic/: env.py
backend/User_Service/src/: main.py
backend/docs/: architecture.md  design.md
frontend/: .env.example  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  feed.ts  games.ts  guides.ts  leaderboard.ts  profileStats.ts  recommendations.ts  search.ts  social.ts  (+4 more)
(+113 files in other folders)
